# bani-flow

./: .gitignore  .roomodes  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  bani_add_bundle.json  metadata_pains.md  preface. md  pyproject.toml  scratch.md
.github/: copilot-instructions.md
assets/: manifest.webmanifest  sw.js
carnatic/: .clinerules  LEARNINGS.md  README.md  __init__.py  _phase2_extract.py  add_missing_composers.py  backfill_katapayadi.py  bani_add.py  build_recording_index.py  cli.py  crawl.py  empty.html  export_reduced_graph.py  generate_pwa_icons.py  graph.html  graph_api.py  import_reduced_graph.py  melakarta_math.py  merge_melakarta.py  migrate_compositions.py  migrate_musicians.py  migrate_musicians_traditions.py  migrate_ragas_tradition.py  migrate_recordings.py  migrate_to_graph_json.py  patch_roomodes_note_to_self.py  reduced_graph.py  remove_youtube_entry.py  render.py  serve.py  write_cli.py  writer.py
diagrams/: DIAGRAM-001-data-schema-relationships.md
plans/: ADR-002-dual-search-boxes.md  ADR-005-right-sidebar-space-utilization.md  ADR-007-search-bar-colocation.md  ADR-009-right-sidebar-title-instrument-capitalisation.md  ADR-010-multiple-versions-same-composition.md  ADR-011-left-right-sidebar-symmetry.md  ADR-013-single-source-of-truth-traversal-layer.md  ADR-015-librarian-write-commands.md  ADR-016-writer-validation-source-of-truth.md  ADR-017-phonetic-search-transliteration.md  ADR-020-raga-composition-header-parity.md  ADR-021-melakarta-first-class-citizens.md  ADR-023-raga-wheel-third-view.md  ADR-024-render-refactor.md  ADR-025-cross-panel-coupling-and-view-sync.md  ADR-027-reflective-metadata-popover.md  ADR-028-design-token-single-source-of-truth.md  ADR-029-sruti-bar-tanpura-drone-strip.md  ADR-030-view-selector-restructure.md  ADR-031-data-entry-forms-json-generator.md  ADR-032-mobile-first-overhaul-strategy.md  (+164 more)
(+1262 files in other folders)
