[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bani-flow"
version = "0.2.0"
description = "Bani Flow — navigate the Carnatic classical music landscape: lineages, timelines, ragas, and recordings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Bani Flow Contributors" },
]
keywords = [
  "carnatic", "music", "lineage", "knowledge-graph",
  "bani", "raga", "guru-shishya", "cytoscape", "visualization"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "requests>=2.28",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
]

[project.scripts]
gstree-render  = "carnatic.render:main"
gstree-crawl   = "carnatic.crawl:main"
gstree-serve   = "carnatic.serve:main"

[project.urls]
Homepage       = "https://github.com/vyaas/bani_flow"
Repository     = "https://github.com/vyaas/bani_flow"
"Bug Tracker"  = "https://github.com/vyaas/bani_flow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["carnatic*"]

[tool.setuptools.package-data]
"carnatic" = ["data/*.json", "*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths    = ["carnatic/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
